2004-11-16 Alain Magloire
	Optimize things by providing a new method
	ICDIRegisterGroup.hasRegisters();
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIRegisterGroup.java
	* src/org/eclipse/cdt/debug/internal/core/model/CRegisterGroup.java

2004-11-15 Mikhail Khodjaiants
	Fix for bug 78604: Disassembly causes Java exception when disassembling beyond fn(?).
	Added the "getAddressFactory" method to the "IDisassembly" interface.
	* IDisassembly.java
	* Disassembly.java

2004-11-15 Mikhail Khodjaiants
	Batch breakpoint updates in one job.
	* CBreakpointManager.java

2004-11-12 Mikhail Khodjaiants
	Apply the breakpoint's condition changes to the associated gdb breakpoint 
	only if there are differences.
	* CBreakpointManager.java

2004-11-12 Mikhail Khodjaiants
	Compare breakpoint source handles as pathes.
	* CDIDebugModel.java
  
2004-11-11 Alain Magloire
	Fix for PR 75000, from PalmSource
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIVariable.java

2004-11-10 Mikhail Khodjaiants
	Fix for bug 76340: CDT hogs Windows input loop when double clicking on a breakpoint.
	* InternalDebugCoreMessages.properties
	* CBreakpointManager.java

2004-11-09 Mikhail Khodjaiants
	Fix for bug 77275: Disassembly causes Java exception for fn's with 0 bytes fn prologues.
	* DisassemblyBlock.java

2004-11-09 Mikhail Khodjaiants
	Partial fix for bug 41725: I can't set a breakpoint in a function where I used attach source.
	* CBreakpointManager.java

2004-11-09 Alain Magloire
	Put possiblity to set Exception breakpoint
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDIBreakpointManagement.java

2004-11-08 Alain Magloire
	Bug in CVariableFactory for globals, the filename of the 
	binary was use instead of the filename of the symbol.
	* src/org/eclipse/cdt/debug/internal/core/model/CVariableFactory.java

2004-11-08 Alain Magloire
	New class ICDIFunctionFinished.
	It return the return value of the function.
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDIFunctionFinished.java

2004-11-04 Mikhail Khodjaiants