@@ -8,7 +8,7 @@
  **************************************************************************************************/
 package org.eclipse.cdt.launch.internal;
 
-import org.eclipse.cdt.core.IBinaryParser.IBinaryExecutable;
+import org.eclipse.cdt.core.IBinaryParser.IBinaryObject;
 import org.eclipse.cdt.core.model.ICProject;
 import org.eclipse.cdt.debug.core.CDIDebugModel;
 import org.eclipse.cdt.debug.core.ICDTLaunchConfigurationConstants;
@@ -50,7 +50,7 @@ public class CoreFileLaunchDelegate extends AbstractCLaunchDelegate {
 			monitor.worked(1);
 			IPath exePath = verifyProgramPath(config);
 			ICProject project = verifyCProject(config);
-			IBinaryExecutable exeFile = verifyBinary(project, exePath);
+			IBinaryObject exeFile = verifyBinary(project, exePath);
 
 			ICDebugConfiguration debugConfig = getDebugConfig(config);
 			ICDISession dsession = null;
